tests/Routing/Mapping/Files/Classes/Valid/Attribute/AbstractRoute.php
<?php

/*
 * slim-routing (https://github.com/juliangut/slim-routing).
 * Slim framework routing.
 *
 * @license BSD-3-Clause
 * @link https://github.com/juliangut/slim-routing
 * @author Julián Gutiérrez <juliangut@gmail.com>
 */

declare(strict_types=1);

namespace Jgut\Slim\Routing\Tests\Mapping\Files\Classes\Valid\Attribute;

use Jgut\Slim\Routing\Mapping\Attribute\Group;
use Jgut\Slim\Routing\Mapping\Attribute\Middleware;

/**
 * Example dependent route.
 */
#[Group(
    prefix: 'abstract',
    pattern: '/abstract',
)]
#[Middleware('abstractMiddleware')]
abstract class AbstractRoute {}
